# odin-sequencer

./: .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  package-lock.json  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
app/: package-lock.json  package.json
app/odin-sequencer-react-ui/: .npmignore  README.md  package-lock.json  package.json
app/odin-sequencer-react-ui/lib/components/: CardRow.jsx  ExecutionPanel.jsx  MessageLog.jsx  ModalParams.jsx  ModuleList.jsx  SequenceButtons.jsx  SequenceCard.jsx  SequenceModule.jsx  SequenceTable.jsx  SequencerDashboard.jsx  useMessageLog.jsx
app/odin-sequencer-react-ui/lib/components/CardRow/: index.jsx
app/odin-sequencer-react-ui/lib/components/ExecutionPanel/: index.jsx
app/odin-sequencer-react-ui/lib/components/MessageLog/: index.jsx
app/odin-sequencer-react-ui/lib/components/ModalParams/: index.jsx
app/odin-sequencer-react-ui/lib/components/SequenceButtons/: index.jsx
app/odin-sequencer-react-ui/lib/components/SequenceCard/: index.jsx
app/odin-sequencer-react-ui/lib/components/SequenceTable/: index.jsx
app/odin-sequencer-react-ui/lib/components/SequencerDashboard/: index.jsx
app/src/: App.css  App.js  SequenceCard.css
app/src/components/: AdapterEndpointWrapper.js  CardRow.js  EndpointExample.js  ExecutionPanel.js  MessageLog.js  ModuleList.js  SeqCard.js  SequenceButtons.js  SequenceCard.js  SequenceModule.js  alertUtils.js  useMessageLog.js
config/: odin_sequencer.cfg  odin_sequencer_rpc.cfg
config/supervisord/: supervisord.conf
config/supervisord/conf.d/: celeryd.conf
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: basic.py  resolve_deps.py  test_auto_reload.py  test_reload.py
examples/dependencies/: a.py  b.py  c.py  d.py  e.py  f.py
examples/rpc/jupyter/: sequencer.ipynb
examples/rpc/sequences/: example_sequences.py
examples/sequences/: example_sequences.py  qem_plotcoarseMulti.py  qem_sequences.py  spi_commands.py
rpc/: pyproject.toml
rpc/src/odin_sequencer/rpc/: client.py  protocol.py  server.py
rpc/test/: test_protocol.py
rpc/test/config/: odin_sequencer_rpc.cfg
rpc/test/jupyter/: sequencer.ipynb
rpc/test/sequences/: example_sequences.py
scripts/: start_worker.sh  stop_worker.sh  workers.txt
src/odin_sequencer/: __init__.py  adapter.py  command_sequencer.py  dummy_context.py  exceptions.py  manager.py  odin_sequencer.cfg  process_queue.py  process_queue_context.py  sequence_logger.py  tasks.py  watcher.py
src/odin_sequencer/rpc/: __init__.py  client.py  protocol.py  server.py  util.py
static/: index.html
static/css/: command-sequencer.css
static/js/: command_sequencer.js  odin_server.js
tests/: __init__.py  conftest.py  test_adapter.py  test_command_sequencer.py  test_file_watcher_factory.py  test_inotify_file_watcher.py  test_odin_sequencer.py  test_protocol.py  test_standalone_file_watcher.py  testutils.py
tests/data/: basic_sequences.py  empty_list_param.py  hello.txt  illegal_import.py  illegal_syntax.py  list_param_contains_heterogeneous_elements.py  list_param_contains_list_element.py  missing_default_param_value.py  no_provide.py  provide_mismatch.py  sequences_with_list_params.py  with_requires.py
tests/data/context_data/: context_sequences.py
